# VAR-ParScale

./: .env.example  CONTINUATION.md  EXECUTE_PHASE2A.md  H100_SETUP.md  PHASE2A_BALANCED_ASSESSMENT.md  PHASE2A_REALITY_CHECK.md  Phase2A技术现状报告.md  QUICK_START.md  README.md  SSH_ACCESS.md  SSH_CONNECTION.md  血淋淋现实清算报告.md
cloudexe/: execute_phase2a.py  final_breakthrough.sh  final_last_cut.sh  final_with_real_diversity.sh  final_working_version.sh  fix_cuda_error.sh  fix_final_loop.sh  minimal_working_test.sh  run_debug_diversity.sh  run_final_patch.sh  run_final_patch_correct.sh  run_final_patch_fixed.sh  run_final_test.sh  run_final_test_fixed.sh  run_final_with_diversity.sh  run_simple_test.sh  run_true_shared_final.sh  run_working_version.sh  setup_h100_environment.py  ssh_setup.sh  true_shared_backbone_final.sh
experiments/: decision_framework.py  exp1_baseline_establishment.py  exp2_parscale_p2_implementation.py  exp3_direct_comparison.py  experiment3_comparison.py  fixed_baseline_experiment.py  parscale_var_implementation.py
phase2a/: LITE_HYBRID_EXPERIMENT_CONCLUSION.md  PROJECT_STATUS_UPDATE.md  README.md  README_PARSCALE_EAR.md  RESEARCH_METHODOLOGY_REFLECTION.md  SHA256SUMS  batched_transformer_surgery.py  deep_var_inspection.py  enhanced_parscale_var.py  experiment_1_one_step_energy.py  final_72h_go_no_go_report.md  generate_sha256.sh  lite_hybrid_h100_final.py  lite_hybrid_h100_success_report.md  litevae_integration.py  optimized_parscale_var.py  performance_profiler.py  pyproject.toml  quick_check.py  run_a1_fid_validation.py  sanity_check_validation.py  scaling_law_validation.py  setup_env.sh  shared_backbone_parscale.py  test_shared_batch.py  true_batched_parscale_var.py  true_shared_backbone_var.py
phase2a/.github/workflows/: ci.yml
phase2a/ci/: ablate_coarse.py  ablate_fine.py  create_imagenet_ref.py  fid_eval.py  latency.py  run.sh  sanity.py  validate_results.py
phase2a/ci/tests/: test_latency.py
